mobile menu fix mit dark mode button

--- a/ReactWebsite/storyverse/src/App.css
+++ b/ReactWebsite/storyverse/src/App.css
@@ -125,6 +125,9 @@ a:active{
   .mobile-menu{
     display: block;
   }
+  .dark-mode-button-user-area{
+    display: none;
+  }
 }
 
 /*Scrollbar*/
